# Dependency-Resolver

./: .gitignore  LICENSE  README.md
.github/workflows/: ubuntu-ci.yml  windows-ci.yml
include/: dependency_resolver.hpp
tests/: CMakeLists.txt  build.cpp
